chore: Regular code maintenance

--- a/.vitepress/theme/style.css
+++ b/.vitepress/theme/style.css
@@ -1,8 +1,8 @@
 :root {
   --vp-font-family-base:
-    "Iosevka", "Cascadia Code", "Menlo", "DejaVu Sans Mono", "LXGW Wenkai",
+    "Iosevka", "Cascadia Code", "Menlo", "DejaVu Sans Mono", "HYWenHei",
     "PingFang SC", "Microsoft YaHei", monospace !important;
   --vp-font-family-mono:
-    "Iosevka", "Cascadia Code", "Menlo", "DejaVu Sans Mono", "LXGW Wenkai",
+    "Iosevka", "Cascadia Code", "Menlo", "DejaVu Sans Mono", "HYWenHei",
     "PingFang SC", "Microsoft YaHei", monospace !important;
 }
